# whisperX

./: JETSON_INSTALL.md  README.md  pyproject.toml  requirements-base.txt  requirements-jetson.txt  requirements.txt
whisperx/: alignment.py  diarize.py
whisperx/vads/: pyannote.py
